--- a/notes/ch09 内存模型和名称空间.md
+++ b/notes/ch09 内存模型和名称空间.md
@@ -35,7 +35,8 @@
 
   * 图9.1简要地说明了在UNIX 系统中将该程序组合起来的步骤：
 
-    * ![image-20231031104927914]
+    * ![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/6e114ad2-e50d-40ff-8eda-a6122e3d6ef6)
+
 
   * 警告：在IDE中，不要将头文件加入到项目列表中，也不要在源代码文件中使用#imclude 来包含其他源代码文件。
 
