--- a/cpp_practice/book_practice/ch06/ch06.md
+++ b/cpp_practice/book_practice/ch06/ch06.md
@@ -539,13 +539,51 @@ quietly across 15 meters of lawn. q
 ```
 
 ```c++
+// demo.cpp -- book practice demo
+#include <iostream>
+#include <cctype>
 
+int main() {
+	using namespace std;
+	
+	char vowels[] = {'a', 'e', 'i', 'o', 'u'};
+	string words;
+
+	int vowels_num = 0;
+	int consonants_num = 0;
+	int others_num = 0;
+
+	cout << "Enter words (q to quit):\n";
+	// 字符串内包含好多单词，cin会自动在空格处断开输入
+	while (cin >> words && words != "q") {
+		char ch = words[0];
+		if (!isalpha(ch)) {
+			others_num++;
+			continue;
+		}
+		bool is_vowels = false;
+		for (int i = 0; i < 5; i++) {
+			if (vowels[i] == ch) {
+				vowels_num++;
+				is_vowels = true;
+				break;
+			}
+		}
+		if (!is_vowels)
+			consonants_num++;
+	}
+
+	cout << vowels_num << " words beginning with vowels\n";
+	cout << consonants_num << " words beginning with consonants\n";
+	cout << others_num << " others\n";
+
+	return 0;
+}
 ```
 
 
 
 ### 8．编写一个程序，它打开一个文件文件，逐个字符地读取该文件，直到到达文件末尾，然后指出该文件中包含多少个字符。
-
 ```C++
 
 ```
