--- a/notes/ch09 内存模型和名称空间.md
+++ b/notes/ch09 内存模型和名称空间.md
@@ -151,4 +151,13 @@
 
 
 ### 9.2 储存持续性、作用域和连接性
-20231031
+
+* 1、C++使用四种不同的方案来储存数据，它们的区别在于数据保留在内存中的时间：
+  * 自动存储持续性：在函数定义中声明的变量(包括函数参数)的存储持续性为自动的。它们在序开始执行其所属的函数或代码块时被创建，在执行完函数或代码块时，它们使用的内存被释放C++有两种存储持续性为自动的变量。
+  * 静态存储持续性：在函数定义外定义的变量和使用关键字 static 定义的变量的存储持续性都为静态。它们在程序整个运行过程中都存在。C++有3种存储持续性为静态的变量。
+  * 线程存储持续性：当前，多核处理器很常见，这些 CPU 可同时处理多个执行任务。这让程序能够将计算放在可并行处理的不同线程中。如果变量是使用关键字 thread local 声明的，则其生命周期与所属的线程一样长。本书不探讨并行编程。
+  * 动态存储持续性：用new运算符分配的内存将一直存在，直到使用 delete 运算符将其释放或程序结束为止。这种内存的存储持续性为动态，有时被称为自由存储 (free store)或堆 (heap)。
+
+
+
+#### 9.2.1 作用域和链接
