--- a/notes/ch09 内存模型和名称空间.md
+++ b/notes/ch09 内存模型和名称空间.md
@@ -161,3 +161,18 @@
 
 
 #### 9.2.1 作用域和链接
+
+* 1、作用域（scope）描述了名称在文件（翻译单元）的多大范围内可见，例如：
+  * 函数中定义的变量可在该函数中使用，但不能在其他函数中使用；
+  * 而在文件中的函数定义之前定义的变量则可在所有函数中使用。
+* 2、连接性（linkage）描述了名称如何在不同单元间共享。
+  * 连接性为外部的名称可在文件间共享；
+  * 连接性为内部的名称只能由一个文件中的函数共享。
+  * 自动变量的名称没有连接性，因为它们不能共享。
+* 3、变量的作用域种类：
+  * 作用域为局部的变量只在定义它的代买块（由花括号括起一系列语句）中可用；
+  * 作用域为全局的变量在定义位置到文件结尾之间都可用。
+    * 在函数原型作用域中使用的名称、在类中声明的成员作用域、在名称空间中声明的变量的作用域......P305;
+* 4、C++函数的作用域可以是整个类或整个名称空间，但不能是局部的。
+
+#### 9.2.2 自动存储持续性
