--- a/notes/ch09 内存模型和名称空间.md
+++ b/notes/ch09 内存模型和名称空间.md
@@ -176,3 +176,95 @@
 * 4、C++函数的作用域可以是整个类或整个名称空间，但不能是局部的。
 
 #### 9.2.2 自动存储持续性
+
+* 1、在默认情况下，函数中声明的函数参数和变量的存储持续性为自动，作用域为局部，没有链接性。
+
+  * 当程序开始执行这些变量所属的代码块时，将为其分配内存；当函数结束时，这些变量都将消失。
+
+* 2、如果在代码块中定义了变量，则该变量的存在时间和作用域将被限制在该代码块内。
+
+  * ```c++
+    int main()
+    {
+        int teledeli = 5;
+        {	//websight allocated
+            cout << "Hello\n";
+            int websight = -2;	//websight scope begins
+            cout << teledeli << ' ' << teledeli << endl;
+        }	//websight expires
+        cout << teledeli << endl;
+        ...
+    }	//teledeli expires
+    ```
+
+  * 此时teledeli在内部代码块和外部代码块都可见，而websight只在内部代码块中可见。
+
+  * 如果内部代码块中的websight改成teledeli，使得由两个同名的变量：
+
+    * 程序执行内部代码块中的语句时，将teledeli解释为局部代码块变量。（新的定义隐藏了以前的定义，新定义可见，旧定义暂时不可见。在程序离开该代码块时，原来的定义又重新可见）
+    * ![image-20231101104013732](C:\Users\10482\AppData\Roaming\Typora\typora-user-images\image-20231101104013732.png)
+
+  * 示例：
+
+    * ```c++
+      // ch09_04_auto.cpp -- illustrating scope of automatic variables
+      #include<iostream>
+      
+      void oil(int x);
+      int main() {
+      	using namespace std;
+      
+      	int texas = 31;
+      	int year = 2011;
+      	cout << "In main(), texas = " << texas << ", &texas = ";
+      	cout << &texas << endl;
+      
+      	cout << "In main(), year = " << year << ", &year =";
+      	cout << &year << endl;
+      
+      	oil(texas);
+      	cout << "In main(), texas = " << texas << ", &texas = ";
+      	cout << &texas << endl;
+      
+      	cout << "In main(), year = " << year << ", &year =";
+      	cout << &year << endl;
+      
+      	return 0;
+      }
+      
+      void oil(int x) {
+      	using namespace std;
+      	int texas = 5;
+      
+      	cout << "In oil(), texas = " << texas << ", &texas = ";
+      	cout << &texas << endl;
+      
+      	cout << "In oil(), x = " << x << ", &x = ";
+      	cout << &x << endl;
+      	{
+      		int texas = 113;
+      		cout << "In block, texas = " << texas;
+      		cout << ", &texas = " << &texas << endl;
+      		cout << "In block, x = " << x << ", &x = ";
+      		cout << &x << endl;
+      	}
+      	cout << "Post-block texas = " << texas;
+      	cout << ", &texas = " << &texas << endl;
+      }
+      ```
+
+  * 结果：
+
+    * ```c++
+      In main(), texas = 31, &texas = 0136FD18
+      In main(), year = 2011, &year =0136FD0C
+      In oil(), texas = 5, &texas = 0136FC24
+      In oil(), x = 31, &x = 0136FC38
+      In block, texas = 113, &texas = 0136FC18
+      In block, x = 31, &x = 0136FC38
+      Post-block texas = 5, &texas = 0136FC24
+      In main(), texas = 31, &texas = 0136FD18
+      In main(), year = 2011, &year =0136FD0C
+      ```
+
+
