--- a/notes/ch09 内存模型和名称空间.md
+++ b/notes/ch09 内存模型和名称空间.md
@@ -202,8 +202,7 @@
   * 如果内部代码块中的websight改成teledeli，使得由两个同名的变量：
 
     * 程序执行内部代码块中的语句时，将teledeli解释为局部代码块变量。（新的定义隐藏了以前的定义，新定义可见，旧定义暂时不可见。在程序离开该代码块时，原来的定义又重新可见）
-    * ![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/0fd813eb-dbb3-4385-a05a-07b57137ec40)
-
+    * ![image-20231101104013732](C:\Users\10482\AppData\Roaming\Typora\typora-user-images\image-20231101104013732.png)
 
   * 示例：
 
@@ -268,4 +267,37 @@
       In main(), year = 2011, &year =0136FD0C
       ```
 
+* 3、使用C++11中的auto
 
+  * 关键字auto用于自动类型判断：P307
+
+* 4、自动变量的初始化
+
+  * 可以使用任何在声明时其值为已知的表达式来初始化自动变量：
+
+    * ```c++
+      int w;					//value of w is indeterminate(不确定)
+      int x = 5;				//initialized with a numeric literal
+      int big = INT_MAX - 1;	 //initialized with a constant expression
+      int y = 2 * x;			//use previously determined value of x
+      cin >> x;
+      int z = 3 * w;			//use new value of w
+      ```
+
+* 5、自动变量和栈
+
+  * 由于自动变量的数目随函数的开始和结束而增减，因此程序必须在运行时对自动变量进行管理。
+  * 常用的方法时留出一段内存，并将其视为栈，以管理变量的增减。
+  * 之所以被称为栈：是因为新数据被象征性的放在原有数据的上面，当程序使用完后，将其从栈中删除。
+  * 栈时LIFO（后进先出），集最后加入到栈中的变量首先被弹出。（栈是弹夹结构）
+    * 这种设计简化了参数传递。函数调用将其参数的值放在栈顶，然后重新设置栈顶指针。被调用的函数根据其形参描述来确定每个参数的地址。
+    * ![image-20231101112224009](C:\Users\10482\AppData\Roaming\Typora\typora-user-images\image-20231101112224009.png)
+
+* 6、寄存器变量
+
+  * 关键字register在C++中只是显式地指出变量是是自动的。
+  * 鉴于关键字register只能用于原本就是自动地变量，使用它的卫衣原因是，指出程序员想使用一个自动变量，这个变量的名称可能与外部变量相同。
+  * 这与auto以前的用途完全相同，然而保留关键字register的重要原因是：
+    * 避免使用了该关键字的现有代码非法。
+
+#### 9.2.3 静态持续变量
