--- a/notes/ch09 内存模型和名称空间.md
+++ b/notes/ch09 内存模型和名称空间.md
@@ -291,7 +291,8 @@
   * 之所以被称为栈：是因为新数据被象征性的放在原有数据的上面，当程序使用完后，将其从栈中删除。
   * 栈时LIFO（后进先出），集最后加入到栈中的变量首先被弹出。（栈是弹夹结构）
     * 这种设计简化了参数传递。函数调用将其参数的值放在栈顶，然后重新设置栈顶指针。被调用的函数根据其形参描述来确定每个参数的地址。
-    * ![image-20231101112224009](C:\Users\10482\AppData\Roaming\Typora\typora-user-images\image-20231101112224009.png)
+    * ![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/50a850b2-ca8f-4e1e-887e-b5fd9a2f829b)
+
 
 * 6、寄存器变量
 
