--- a/notes/ch09 内存模型和名称空间.md
+++ b/notes/ch09 内存模型和名称空间.md
@@ -202,7 +202,8 @@
   * 如果内部代码块中的websight改成teledeli，使得由两个同名的变量：
 
     * 程序执行内部代码块中的语句时，将teledeli解释为局部代码块变量。（新的定义隐藏了以前的定义，新定义可见，旧定义暂时不可见。在程序离开该代码块时，原来的定义又重新可见）
-    * ![image-20231101104013732](C:\Users\10482\AppData\Roaming\Typora\typora-user-images\image-20231101104013732.png)
+    * ![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/05bd7970-485a-45d8-800a-96874f5ccba0)
+
 
   * 示例：
 
