--- a/cpp_practice/book_practice/ch06/ch06.md
+++ b/cpp_practice/book_practice/ch06/ch06.md
@@ -584,13 +584,55 @@ int main() {
 
 
 ### 8．编写一个程序，它打开一个文件文件，逐个字符地读取该文件，直到到达文件末尾，然后指出该文件中包含多少个字符。
+
 ```C++
+// demo.cpp -- book practice demo
+#include <iostream>
+#include <fstream>
+#include <cstdlib>
+const int SIZE = 60;
 
+int main() {
+	using namespace std;
+
+	char filename[SIZE];
+	ifstream inFile;
+	cout << "Enter name of data file: ";
+	cin.getline(filename, SIZE);
+	inFile.open(filename);
+	if (!inFile.is_open()) {
+		cout << "Could not open the file " << filename << endl;
+		cout << "Program terminating.\n";
+		exit(EXIT_FAILURE);
+	}
+
+	char data;
+	int count = 0;
+	inFile >> data;
+	while (inFile.good()) {
+		++count;
+		cout << data;
+		inFile >> data;
+	}
+
+	if (inFile.eof())
+		cout << "End of file reached.\n";
+	else if (inFile.fail())
+		cout << "Input terminated by data mismatch.\n";
+	else
+		cout << "Input terminated for unknown reason.\n";
+
+	if (count == 0)
+		cout << "No data processed.\n";
+	else
+		cout << "Items read: " << count << endl;
+	inFile.close();
+
+	return 0;
+}
 ```
 
-```c++
 
-```
 
 ### 9．完成编程练习 6，但从文件中读取所需的信息。该文件的第一项应为捐款人数，余下的内容应为成对的行。在每一对中，第一行为捐款人姓名，第二行为捐款数额。即该文件类似于下面:
 
