--- a/notes/ch08 函数探幽.md
+++ b/notes/ch08 函数探幽.md
@@ -2,6 +2,14 @@
 
 ### 8.1 C++内联函数
 
+* 常规函数和内联函数之间的主要区别不在于编写方式，而在于C++编译器如何将它们组合到程序中。
+  * 常规函数调用：与阅读文章时停下来看脚注，并在阅读完脚注后返回到以前阅读的地方类似。
+  * 内联函数调用：程序无需跳到另一个位置处执行代码，再调回来。因此，内联函数的运行速度比常规函数稍快，但代价是需要占用更多的内存。
+
+* 什么时候使用内联函数？
+  * 如果执行函数代码的时间比处理函数调用机制的时间长，则节省的时间将只占整个过程的很小一部分。如果代码执行时间很短，则内联调用就可以节省非内联调用使用的大部分时间。
+  * 另一方面，由于这个过程相当快，因此尽管节省了该过程的大部分时间，但节省的时间绝对值并不大，除非该函数经常被调用。
+
 * 相当于对调用函数进行复制，在使用的地方添加副本：
 
   * ![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/86ae4cb5-f516-4bd8-a87f-f443b4a67590)
