--- a/notes/ch09 内存模型和名称空间.md
+++ b/notes/ch09 内存模型和名称空间.md
@@ -305,3 +305,20 @@
 
 #### 9.2.3 静态持续变量
 
+* C++为静态存储持续性变量提供了3种连接性：
+
+  * 外部链接性（可在其他文件中访问）
+  * 内部链接性（只能在当前文件中访问）
+  * 无链接性（只能在当前函数或代码块中访问）
+  * 这3种链接性都在整个程序执行期间存在，与自动变量相比，它们的寿命更长。
+
+* 静态变量的数目在程序运行期间是不变的，因此程序不需要使用特殊的装置（如栈）来管理它们。编译器将分配固定的内存块来储存所有的静态变量，这些变量在整个程序执行期间一直存在。
+
+  * ```c++
+    ...
+    int global = 1000;
+    static int one_file = 50;
+    ```
+
+  * 
+
