--- a/notes/ch09 内存模型和名称空间.md
+++ b/notes/ch09 内存模型和名称空间.md
@@ -314,11 +314,60 @@
 
 * 静态变量的数目在程序运行期间是不变的，因此程序不需要使用特殊的装置（如栈）来管理它们。编译器将分配固定的内存块来储存所有的静态变量，这些变量在整个程序执行期间一直存在。
 
-  * ```c++
-    ...
-    int global = 1000;
-    static int one_file = 50;
-    ```
+  * 创建链接性为外部的静态持续变量，必须在代码块的外面声明它；
 
-  * 
+  * 创建链接性为内部的静态持续变量，必须在代码块的外面声明它，并使用static限定符；
 
+  * 创建没有链接性的静态持续变量，必须在代码块内声明它，并使用static限定符。
+
+    * ```c++
+      ...
+      int global = 1000;
+      static int one_file = 50;
+      int main(){
+      ...
+      }
+      void funct1(int n){
+          static int count = 0;
+          int llama;
+      ...
+      }
+      void funct2(int q){
+      ...
+      }
+      ```
+
+    * 所有静态持续变量（global、one_file和count）在整个程序执行期间都存在。
+
+    * 在funct1( )中声明的变量count的作用域为局本，没有链接性：
+
+      * 即只能在funct1( )函数中使用它，就像自动变量llama一样。
+      * 然而与llama不同的是：
+        * 及时在funct1( )函数没有被执行时，count也留在内存中。
+
+    * global 和 one_file 的作用域都为整个文件，即在从声明位置到文件结尾的范围内都可以被使用。
+
+      * 由于 one_file 的链接性为内部，因此只能在包含上述代码文件中使用它；
+      * 由于 global 的链接性为外部，因此可以在程序的其他文件中使用它。
+
+    * 所有静态持续变量都有下述初始化特征：未被初始化的静态变量的所有位都被设置为0。
+
+    * 表 9.1 指出了关键字 static 的两种用法，但含义有些不同:用于局部声明，以指出变量是无链接性的静态变量时，static 表示的是存储持续性：而用于代码块外的声明时，static 表示内部链接性，而变量已经是静态持续性了。有人称之为关键字重载，即关键字的含义取决于上下文。
+
+      * ![image-20231108200608631](C:\Users\10482\AppData\Roaming\Typora\typora-user-images\image-20231108200608631.png)
+
+* 静态变量的初始化
+
+  * 除默认的零初始化外，还可以对静态变量进行常量表达式初始化和动态初始化。
+
+    * 零初始化和常量表达式初始化被统称为静态初始化，这意味着在编译器处理文件（翻译单元）时初媒化变量。动态初始化意味着变量将在编译后初始化。
+
+    * 常量表达式并非只能使用字面常量的计算表达式，例如还可以使用sizeof运算符：
+
+      * ```c++
+        int enough = 2 + sizeof (long) + 1;
+        ```
+
+
+
+#### 9.2.4 静态持续性、外部链接性
