--- a/notes/ch09 内存模型和名称空间.md
+++ b/notes/ch09 内存模型和名称空间.md
@@ -354,7 +354,8 @@
 
     * 表 9.1 指出了关键字 static 的两种用法，但含义有些不同:用于局部声明，以指出变量是无链接性的静态变量时，static 表示的是存储持续性：而用于代码块外的声明时，static 表示内部链接性，而变量已经是静态持续性了。有人称之为关键字重载，即关键字的含义取决于上下文。
 
-      * ![image-20231108200608631](C:\Users\10482\AppData\Roaming\Typora\typora-user-images\image-20231108200608631.png)
+      * ![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/318da534-a3af-4657-99eb-2477b7f7c533)
+
 
 * 静态变量的初始化
 
