--- a/notes/ch09 内存模型和名称空间.md
+++ b/notes/ch09 内存模型和名称空间.md
@@ -372,3 +372,31 @@
 
 
 #### 9.2.4 静态持续性、外部链接性
+
+* 链接性为外部的变量通常简称为外部变量，它们的存储持续性为静态，作用域为整个文件。（在main函数之前声明定义，并且不使用static等任何关键字。）
+
+  * 因此外部变量也称为全局变量。
+
+* 1、单定义规则
+
+  * 一方面，在每个使用外部变量的文件中，都必须声明它；
+
+  * 另一方面，C++有“单定义规则”：
+
+    * 变量只能有一次定义。
+
+  * 为了解决这两个需求，C++提供了两种变量声明：
+
+    * 1 定义声明（定义），它给变量分配存储空间；
+
+    * 2 引用声明（声明），它不给变量分配存储空间，因为它引用已有的变量。
+
+      * 引用声明使用关键字 extern ，且不进行初始化；否则声明为定义，导致分配存储空间：
+
+        * ```c++
+          double up;
+          extern int blem;	//blem defined elsewhere
+          extern char gr = 'z';//definition because initialized
+          ```
+
+        * 
