--- a/notes/ch09 内存模型和名称空间.md
+++ b/notes/ch09 内存模型和名称空间.md
@@ -399,4 +399,77 @@
           extern char gr = 'z';//definition because initialized
           ```
 
-        * 
+      * 如果要在多个文件中使用外部变量，只需在一个文件中包含该变量的定义（单定义规则），但在使用该变量的其他所有文件中，都必须使用关键字 extern 声明它。
+
+        * ![image-20231108205117175](C:\Users\10482\AppData\Roaming\Typora\typora-user-images\image-20231108205117175.png)
+
+* 2、如果在函数中声明了一个与外部变量同名的变量，结果将如何呢？
+
+  * 示例：
+
+    * ```c++
+      // ch09_05_external.cpp -- external variables
+      // compile with support.cpp
+      #include <iostream>
+      using namespace std;
+      
+      //external variable
+      double warming = 0.3;
+      
+      void update(double dt);
+      void local();
+      
+      int main() {
+      	cout << "Global warming is " << warming << " degrees.\n";
+      	update(0.1);
+      	cout << "Global warming is " << warming << " degrees.\n";
+      	local();
+      	cout << "Global warming is " << warming << " degrees.\n";
+      	return 0;
+      }
+      ```
+
+  * 示例：
+
+    * ```c++
+      // ch09_06_support.cpp -- use external variable
+      // compile with external.cpp
+      #include <iostream>
+      extern double warming;
+      
+      void update(double dt);
+      void local();
+      
+      using std::cout;
+      
+      void update(double dt) {
+      	extern double warming;
+      	warming += dt;
+      	cout << "Updating global warming to " << warming;
+      	cout << " degrees.\n";
+      }
+      
+      void local() {
+      	double warming = 0.8;
+      
+      	cout << "Local warming = " << warming << " degrees.\n";
+      	cout << "But global warming = " << ::warming;//作用域解析运算符(::)。放在变量名前面时，该运算符表示使用变量的全局版本。
+      	cout << " degrees.\n";
+      }
+      ```
+
+  * 结果：
+
+    * ```c++
+      Global warming is 0.3 degrees.
+      Updating global warming to 0.4 degrees.
+      Global warming is 0.4 degrees.
+      Local warming = 0.8 degrees.
+      But global warming = 0.4 degrees.
+      Global warming is 0.4 degrees.
+      ```
+
+      * local( )函数表明，定义与全局变量同名的局部变量后，局部变量将隐藏全局变量。
+      * 作用域解析运算符(::)。放在变量名前面时，该运算符表示使用变量的全局版本。
+
+      
