--- a/notes/ch09 内存模型和名称空间.md
+++ b/notes/ch09 内存模型和名称空间.md
@@ -401,7 +401,8 @@
 
       * 如果要在多个文件中使用外部变量，只需在一个文件中包含该变量的定义（单定义规则），但在使用该变量的其他所有文件中，都必须使用关键字 extern 声明它。
 
-        * ![image-20231108205117175](C:\Users\10482\AppData\Roaming\Typora\typora-user-images\image-20231108205117175.png)
+        * ![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/79348bd3-b284-4fd4-b4fd-20d2ecbe8af9)
+
 
 * 2、如果在函数中声明了一个与外部变量同名的变量，结果将如何呢？
 
