--- a/notes/ch09 内存模型和名称空间.md
+++ b/notes/ch09 内存模型和名称空间.md
@@ -471,6 +471,12 @@
       ```
 
       * local( )函数表明，定义与全局变量同名的局部变量后，局部变量将隐藏全局变量。
-      * 作用域解析运算符(::)。放在变量名前面时，该运算符表示使用变量的全局版本。
+      * 作用域解析运算符(::)。放在变量名前面时，该运算符表示使用变量的* * * * 全局版本。
 
-      
+* 全局变量和局部变量的选取
+  * 全局变量：所有的函数都能访问全局变量，因此不用传递参数。但易于访问的代价很大——程序不可靠。
+  * 通常情况下，应使用局部变量，应在知晓时才传递数据，而不应不加区分地使用全局变量来时数据可靠。
+
+#### 9.2.5 静态持续性、内部链接性
+
+
