--- a/notes/ch09 内存模型和名称空间.md
+++ b/notes/ch09 内存模型和名称空间.md
@@ -479,3 +479,27 @@
 
 #### 9.2.5 静态持续性、内部链接性
 
+* 将 static 限定符用于作用域为整个文件的变量时，该变量的链接性将为内部的。
+
+* 如果要在其他文件中使用相同的名称来表示其他变量：
+
+  * ```c++
+    //file1
+    int errors = 20；
+    ...
+    --------------------------------------------------
+    //file2
+    static int errors = 5;
+    void froobish(){
+        cout << errors;
+        ...
+    }
+    ```
+
+  * 需要在其他文件中对相同名称使用 static 指出标识符 errors 的链接性为内部，因此并非要提供外部定义。
+
+    * 这样可以在链接性为内部的静态变量在同一个文件中的读个函数之间共享数据。
+
+  * 如果要在多个文件程序中使用一个外部变量，只能在一个文件中定义一个外部变量。使用该变量的其他文件必须使用关键字 extern 声明它。
+
+    * 这样可以使用外部变量在多文件程序的不同部分之间共享数据。
