--- a/notes/ch09 内存模型和名称空间.md
+++ b/notes/ch09 内存模型和名称空间.md
@@ -503,3 +503,56 @@
   * 如果要在多个文件程序中使用一个外部变量，只能在一个文件中定义一个外部变量。使用该变量的其他文件必须使用关键字 extern 声明它。
 
     * 这样可以使用外部变量在多文件程序的不同部分之间共享数据。
+
+* 示例：
+
+  * ```c++
+    // ch09_07_twofile1.cpp -- variables with external and internal linkage
+    #include <iostream>
+    int tom = 3;			//external variable definition
+    int dick = 30;			//external variable definition
+    static int harry = 300;	//static, internal linkage
+    
+    void remote_access();
+    
+    int main() {
+    	using namespace std;
+    	cout << "main() repotys the following addresses:\n";
+    	cout << &tom << " = &tom, " << &dick << " = &dick, ";
+    	cout << &harry << " = &harry\n";
+    	remote_access();
+    
+    	return 0;
+    }
+    ```
+
+* 示例：
+
+  * ```c++
+    // ch09_08_twofile2.cpp -- variables with internal and external linkage
+    #include <iostream>
+    extern int tom;			//tom difined elsewhere
+    static int dick = 10;	//overrides external dick;
+    int harry = 200;		//external variable definition
+    						//no conflict with twofile1 harry
+    
+    void remote_access() {
+    	using namespace std;
+    	cout << "remote_access() reports the following addresses:\n";
+    	cout << &tom << " = &tom, " << &dick << " = dick, ";
+    	cout << &harry << " = &harry\n";
+    }
+    ```
+
+* 结果：
+
+  * ```c++
+    main() repotys the following addresses:
+    00A5C000 = &tom, 00A5C004 = &dick, 00A5C008 = &harry
+    remote_access() reports the following addresses:
+    00A5C000 = &tom, 00A5C014 = dick, 00A5C010 = &harry
+    ```
+
+
+
+#### 9.2.6 静态存储持续性、无链接性
