--- a/notes/ch09 内存模型和名称空间.md
+++ b/notes/ch09 内存模型和名称空间.md
@@ -556,3 +556,82 @@
 
 
 #### 9.2.6 静态存储持续性、无链接性
+
+* 创建方法：
+
+  * 将 static 限定符用于在代码块中定义的变量。即该变量只在该代码块中可用，但它在该代码块不处于活动状态时仍然存在。
+
+* 示例：
+
+  * ```c++
+    // ch09_09_static.cpp -- using a static local variable
+    #include <iostream>
+    const int ArSize = 10;
+    
+    void strcount(const char* str);
+    
+    int main()
+    {
+    	using namespace std;
+    	char input[ArSize];
+    	char next;
+    
+    	cout << "Enter a line:\n";
+    	cin.get(input, ArSize);
+    	while (cin)
+    	{
+    		cin.get(next);
+    		while (next != '\n')
+    			cin.get(next);
+    		strcount(input);
+    		cout << "Enter next line (empty line to quit):\n";
+    		cin.get(input, ArSize);
+    	}
+    	cout << "Bye.\n";
+    	return 0;
+    }
+    
+    void strcount(const char * str)
+    {
+    	using namespace std;
+    	static int total = 0;
+    	int count = 0;
+    
+    	cout << "\"" << str << "\" contains ";
+    	while (*str++)
+    		count++;
+    	total += count;
+    	cout << count << " characters\n";
+    	cout << total << " characters total\n";
+    }
+    ```
+
+  * 结果：
+
+    * ```c++
+      Enter a line:
+      nice pants
+      "nice pant" contains 9 characters
+      9 characters total
+      Enter next line (empty line to quit):
+      thanks
+      "thanks" contains 6 characters
+      15 characters total
+      Enter next line (empty line to quit):
+      parting is such sweet sorrow
+      "parting i" contains 9 characters
+      24 characters total
+      Enter next line (empty line to quit):
+      ok
+      "ok" contains 2 characters
+      26 characters total
+      Enter next line (empty line to quit):
+      
+      Bye.
+      ```
+
+      * 每次函数被调用时候，自动变量 count 都会被重置为0，然而静态变量 total 只在程序运行时被这是为0，以后在两次函数调用之间，其值将保持不变，因此能够记录读取的字符总数。
+
+
+
+#### 9.2.7 说明符和限定符
