--- a/notes/ch09 内存模型和名称空间.md
+++ b/notes/ch09 内存模型和名称空间.md
@@ -635,3 +635,56 @@
 
 
 #### 9.2.7 说明符和限定符
+
+* 储存说明符：
+
+  * auto（在C++11中不再是说明符）；
+    * 用于自动类型推断；
+  * register；
+    * 用于在声明中指示寄存器存储，C++中它只是显式地指出变量是自动的。
+  * static；
+    * 被用在作用域为整个文件的声明中，表示内部链接性；被用于局部声明中，表示局部变量的存储持续性为静态的。
+  * extern；
+    * 表明是引用声明，即声明引用在其他地方定义的变量。
+  * thread_local（C++新增的）；
+    * 指出变量的持续性与其所属线程的持续性相同，
+    * thread_local变量之于线程，犹如常规静态变量之于整个程序。
+    * 可与 static 或 extern 结合使用。
+  * mutable；
+    * 根据const来解释，请见下集。
+
+* 1、cv-限定符
+
+  * cv限定符：
+    * const（常用）
+    * volatile
+      * 表明及时程序代码没有对内存单元进行修改，其值也可能发生变化。见P317，用于硬件通信中。
+
+* 2、mutable
+
+  * 用来指出及时结构（或类）变量为const，其某个成员也可以被修改。
+  * 见P317-318
+
+* 3、再谈const
+
+  * 在C++中，const 限定符对默认存储类型稍有影响：
+
+    * 在默认情况下全局变量的链接性为外部的，但const全局变量的链接性为内部的。
+
+    * 也就是说在C++看来，全局const定义就像使用了static说明符一样。
+
+    * 内部链接性还意味着，每个文件都有自己的一组常量，而不是所有文件共享一组常量。每个定义都是其所属文件私有的，这就是能够将常量定义放在头文件中的原因。这样，只要在两个源代码文件中包括同个头文件，则它们将获得同一组常量。
+
+    * 如果出于某种原因，程序员希望某个常量的链接性为外部的，则可以使用 extern 关键字来覆盖默认的内部链接性：
+
+      * ```c++
+        extern const int states = 50;
+        ```
+
+      * 在这种情况下，必须在所有使用该常量的文件中使用exten 关键字来声明它。**这与常规外部变量不同，**定义常规外部变量时，不必使用 extemn 关键字，但在使用该变量的其他文件中必须使用 extem。然而，请记住，鉴于单个const 在多个文件之间共享，因此**只有一个文件可对其进行初始化。**
+
+    * 在**函数或代码块中**声明 const 时，其**作用域为代码块**，即仅当程序执行该代码块中的代码时，该常量才是可用的。这意味着在函数或代码块中创建常量时，不必扫心其名称与其他地方定义的常量发生冲突。
+
+
+
+#### 9.2.8 函数和链接性
