--- a/notes/ch09 内存模型和名称空间.md
+++ b/notes/ch09 内存模型和名称空间.md
@@ -688,3 +688,35 @@
 
 
 #### 9.2.8 函数和链接性
+
+* 和变量一样，函数也有链接性，虽然可选择的范围比变量小。
+
+* 所有函数的持续性都自动为静态的，即在整个程序执行期间都一直存在。
+
+* 在默认情况下，函数的链接性为外部的，即可以在文件间共享。
+
+  * 实际上可以在函数原型中使用关键字 extern 来指出函数是在另一个文件中定义的，不过这是可选的。
+
+  * 还可以使用关键字 static 将函数的链接性设置为内部的，使之只能在一个文件中使用。必须同时在原型和函数定义中使用该关键字：
+
+    * ```c++
+      static int private(double x);
+      ...
+      static int private(double x){
+          ...
+      }
+      ```
+
+    * 意味着函数只在这个文件中可见
+
+    * 还意味着可以在其他文件中定义同名的函数。
+
+* 单定义规则也适用于非内联函数，因此对于每个非内联函数，程序只能包含一个定义。对于链接性外部的函数来说，这意味着在多文件程序中，只能有一个文件(该文件可能是库文件，而不是您提供的)包含该函数的定义，但使用该函数的每个文件都应包含其函数原型。
+
+  * （内联函数的定义能够放在头文件中）
+
+* C++在哪查找函数P319
+
+
+
+#### 9.2.9 语言链接性
