--- a/notes/ch09 内存模型和名称空间.md
+++ b/notes/ch09 内存模型和名称空间.md
@@ -721,3 +721,10 @@
 
 #### 9.2.9 语言链接性
 
+* 在C++中，同一种名称可能对应多个函数，必须将这些函数翻译为不同的符号名称。因此，C++编译器执行名称矫正或名称修饰，为重载函数生成不同的符号名称。
+  * 例如：可以将spiff(int) 转换为_spoff_i，而将spoff(double, double)转换为 _spiff_d_d。这种方法被称为C++语言链接。
+* 链接程序寻找与C++函数调用匹配的函数时，使用的方法与C语言不同。详情见P319
+
+
+
+#### 9.2.10 储存方案和动态分配
