--- a/notes/ch09 内存模型和名称空间.md
+++ b/notes/ch09 内存模型和名称空间.md
@@ -728,3 +728,61 @@
 
 
 #### 9.2.10 储存方案和动态分配
+
+* 前面介绍 C++用来为变量(包括数组和结构)分配内的5种方案(线内存除外)，它们不适用于使用C++运算符new(或C函数malloc())分配的内存，这种内存被称为动态内存。
+
+  * 动态内存由运算符 new 和 delete 控制，而不是由作用域和链接性规则控制。
+
+  * 因此可以在一个函数中分配动态内存，而在另一个函数中将其释放。
+
+  * 与自动内存不同，动态内存不是LIFO，其分配和释放顺序要取决于 new 和 delete 在何时以何种方式被使用。
+
+  * 通常编译器使用三块独立的内存：一块用于静态变量（可能再细分）。一块用于自动变量，另一块用于动态内存。
+
+  * 虽然存储方案**不适用于动态内存**，但**适用于**用来**跟踪动态内存的自动和静态指针变量**。
+
+    * ```c++
+      float * p_fees = new float[20];
+      ```
+
+    * 由 new 分配的 80个字节(假设 float 为4个字节)的内存将一直保留在内存中，直到使用 delete 运算符将其释放。
+
+    * 但当包含该声明的语句块执行完毕时，p_fees 指针将消失。如果希望另一个函数能够使用这80个字节中的内容，**则必须将其地址传递或返回给该函数**。
+
+    * 另一方面，如果将 p_fees 的链接性声明为外部的，则文件中位于该声明后面的所有函数都可以使用它。另外，通过在另一个文件中使用下述声明，便可在其中使用该指针：
+
+      * ```c++
+        extern float * p_fees;
+        ```
+
+* 1、使用 new 运算符初始化
+
+  * 初始化动态分配的变量：
+
+    * 为内置的标量类型（如 int 或 double）分配存储空间并初始化，可在类型名后面加上初始值，并将其用括号括起：
+
+      * ```c++
+        int *pi = new int (6);	// *pi set to 6
+        double *pd = new double (99.99);	//*pd set to 99.99
+        ```
+
+    * 初始化常规结构或数组，需要使用大括号的列表初始化，这要求编译器支持C++11：
+
+      * ```c++
+        struct where {double x; double y; double z;};
+        where *one = new where {2.5, 5.3, 7.2};
+        int *ar = mew int [4] {2, 4, 6, 7};
+        ```
+
+      * 在C++11中，还可以将列表初始化用于单值变量：
+
+        * ```c++
+          int *pin = new int {6};	//*pi set to 6
+          double *pdo = new double {99.99} //*pd set to 99.99
+          ```
+
+* 2、new 失败时
+
+  * new 可能找不到请求的内存量。现在将引发异常std::bad_alloc。第15会演示。
+
+* 3、new：运算符、函数和替换函数
