--- a/notes/ch09 内存模型和名称空间.md
+++ b/notes/ch09 内存模型和名称空间.md
@@ -818,3 +818,149 @@
   * 使用 new 运算符时，可能不仅仅时调用 new( ) 函数。delete 也是。
 
     * 所以可为 new 和 delete 提供替换函数，并根据需要对其进行定制。P321
+
+* 4、定位 new 运算符
+
+  * new 的两种形式：
+
+    * 通常，new 负责在堆（heap）中找到一个足以能够满足要求的内存块。
+    * new 运算符还有另一种变体，被称为定位（placement）new运算符，它让您能够指定要使用的位置。
+
+  * 定位 new 运算符用法：
+
+    * 首先，需要包含头文件 new，它提供了这种版本的 new 的原型；
+
+    * 然后，将 new 运算符运用于提供了所需地址的参数。
+
+    * 除需要指定参数外，语法与常规 new 运算符相同。（使用定位 new 运算符时，变量后面可以有方括号，也可以没有）
+
+    * new 运算符的 4 种用法：
+
+      * ```c++
+        #include <new>
+        struct chaff
+        {
+            char dross[20];
+            int slag;
+        };
+        char buffer1[50];
+        char buffer2[500];
+        int main()
+        {
+            chaff *p1, *p2;
+            int *p3, *p4;
+        // first, the regular forms of new
+            p1 = new chaff;		// place structure in heap
+            p3 = new int[20];	// place int array in heap
+        // now, the two forms of placement new
+            p2 = new (buffer1) chaff;	// place stucture in buffer1
+            p3 = new (buffer2) int[20];	// place int array in buffer2
+            ...
+        }
+        ```
+
+  * 示例：
+
+    * ```c++
+      // ch09_10_newplace.cpp -- using placement new
+      #include <iostream>
+      #include <new>
+      
+      const int BUF = 512;
+      const int N = 5;
+      char buffer[BUF];		//chunk of memory
+      
+      int main()
+      {
+      	using namespace std;
+      	double* pd1, * pd2;
+      	int i;
+      	cout << "Calling new and placement new:\n";
+      	pd1 = new double[N];			// use heap
+      	pd2 = new (buffer) double[N];	// use buffer array
+      	for (i = 0; i < N; i++)
+      		pd2[i] = pd1[i] = 1000 + 20.0 * i;
+      	cout << "Memory addresses:\n" << " heap: " << pd1
+      		<< " static: " << (void*)buffer << endl;
+      	cout << "Memory contents:\n";
+      	for (i = 0; i < N; i++)
+      	{
+      		cout << pd1[i] << " at " << &pd1[i] << "; ";
+      		cout << pd2[i] << " at " << &pd2[i] << endl;
+      	}
+      
+      	cout << "\nCalling new and placement new a second time:\n";
+      	double* pd3, * pd4;
+      	pd3 = new double[N];			// find new address
+      	pd4 = new (buffer) double[N];	// overwrite old data
+      	for (i = 0; i < N; i++)
+      		pd4[i] = pd3[i] = 1000 + 40.0 * i;
+      	cout << "Memory contents:\n";
+      	for (i = 0; i < N; i++)
+      	{
+      		cout << pd3[i] << " at " << &pd3[i] << "; ";
+      		cout << pd4[i] << " at " << &pd4[i] << endl;
+      	}
+      
+      	cout << "\nCalling new and placement new a third time:\n";
+      	delete[] pd1;
+      	pd1 = new double[N];
+      	pd2 = new (buffer + N * sizeof(double)) double[N];
+      	for (i = 0; i < N; i++)
+      		pd2[i] = pd1[i] = 1000 + 60.0 * i;
+      	cout << "Memory contents:\n";
+      	for (i = 0; i < N; i++)
+      	{
+      		cout << pd1[i] << " at " << &pd1[i] << "; ";
+      		cout << pd2[i] << " at " << &pd2[i] << endl;
+      	}
+      	delete[] pd1;
+      	delete[] pd3;
+      
+      	return 0;
+      }
+      ```
+
+    * 结果：
+
+      * ```c++
+        Calling new and placement new:
+        Memory addresses:
+         heap: 0117CF18 static: 0096D3D8
+        Memory contents:
+        1000 at 0117CF18; 1000 at 0096D3D8
+        1020 at 0117CF20; 1020 at 0096D3E0
+        1040 at 0117CF28; 1040 at 0096D3E8
+        1060 at 0117CF30; 1060 at 0096D3F0
+        1080 at 0117CF38; 1080 at 0096D3F8
+        
+        Calling new and placement new a second time:
+        Memory contents:
+        1000 at 0117C4E8; 1000 at 0096D3D8
+        1040 at 0117C4F0; 1040 at 0096D3E0
+        1080 at 0117C4F8; 1080 at 0096D3E8
+        1120 at 0117C500; 1120 at 0096D3F0
+        1160 at 0117C508; 1160 at 0096D3F8
+        
+        Calling new and placement new a third time:
+        Memory contents:
+        1000 at 0117CF18; 1000 at 0096D400
+        1060 at 0117CF20; 1060 at 0096D408
+        1120 at 0117CF28; 1120 at 0096D410
+        1180 at 0117CF30; 1180 at 0096D418
+        1240 at 0117CF38; 1240 at 0096D420
+        ```
+
+      * 📌首先要指出的一点是，定位 new 运算符确实将数组 p2 放在了数组 buffer 中，p2和 buffer 的地址都是 0096D3D8。然而，它们的类型不同：
+
+        * p1是 double 指针，而 buffer 是 char 指针(顺便说一句，这也是程序使用(void *)对 buffer 进行强制转换的原因，如果不这样做，cout 将显示一个字符串)同时，常规 new 将数组 p1放在很远的地方，其地址为 0117CF18，位于动态管理的堆中。
+
+      * 📌第二点：第二次常规 new 运算符查找一个新的内存块，其起始地址为 0117CF18；但第二个定位new运算符分配与以前相同的内存块：起始地址为 0096D3D8 的内存块。
+
+        * 在第三次调用定位 new 运算符时，提供了一个从数组 buffer 开头算起的偏移量，因此将分配新的内存：
+
+          * ```c++
+            pd2 = new (buffer + N * sizeof(double)) double[N];
+            ```
+
+      * 📌第三点：
