--- a/notes/ch09 内存模型和名称空间.md
+++ b/notes/ch09 内存模型和名称空间.md
@@ -963,4 +963,27 @@
             pd2 = new (buffer + N * sizeof(double)) double[N];
             ```
 
-      * 📌第三点：
+      * 📌第三点：是否使用 delete 来释放内存。
+
+        * 对于常规 new 运算符，使用deleteriou 释放内存后，再次调用 new 运算符是，被释放的内存块是可用的；
+        * 对于定位 new 运算符分配的内存，delete 只能用于这样的指针：指向常规 new 运算符分配的内存。因此，buffer 指定的是静态内存，位于 delete 管辖区域只玩，所以常规删除方法将引发错误。
+          * 如果 buffer 是使用常规 new 运算符创建的，便可以使用常规 delete 运算符来释放整个内存块。
+          * 定位 new 运算符的另一种用法：
+            * 将其与初始化结合使用，从而将信息放在特定的硬件地址处。
+
+* 5、定位 new 的其他形式
+
+  * 标准定位 new 调用一个接收两个参数的 new( ) 函数：
+
+    * ```c++
+      int *p1 = new int;				// invokes new(sizeof(int))
+      int *p2 = new(buffer) int;		// invokes new(sizeof(int), buffer)
+      int *p3 = new(buffer) int[40];	// invokes new(40*sizeof(int), buffer)
+      ```
+
+    * 定位 new 函数不可替换，但可重载。它至少需要接收两个参数，其中第一个总是 std::size_t，指定了请求的字节数。这样的重载函数都被称为定义 new，即使额外的参数没有指定位置。
+
+
+
+### 9.3 名称空间
+
