--- a/notes/ch09 内存模型和名称空间.md
+++ b/notes/ch09 内存模型和名称空间.md
@@ -989,3 +989,16 @@
 
 * 在C++，名称可以是变量、函数、结构、枚举、类以及类和结构的成员。
 
+#### 9.3.1 传统的 C++ 名称空间
+
+* 相关术语：
+  * 1、声明区域：声明区域是可以在其中进行声明的区域。
+    * 例如：可以在函数外面声明全局变量，对于这种变量，其声明区域为其声明所在的文件。而对于函数中声明的变量，其声明区域为其声明所在的代码块中。
+    * ![image-20231111194442510](C:\Users\10482\AppData\Roaming\Typora\typora-user-images\image-20231111194442510.png)
+  * 2、潜在作用域：变量的潜在作用域从声明点开始，到其声明区域的结尾。
+    * 因此潜在作用域比声明区域小，这是由于变量必须定义后才能使用。
+    * 变量并非在其潜在作用域内的任何位置都是可见的：
+      * 它可能被另一个在嵌套声明区域中声明的同名变量隐藏。
+    * ![image-20231111194503052](C:\Users\10482\AppData\Roaming\Typora\typora-user-images\image-20231111194503052.png)
+  * 3、作用域：变量对程序而言可见的范围。
+
