--- a/notes/ch09 内存模型和名称空间.md
+++ b/notes/ch09 内存模型和名称空间.md
@@ -1002,3 +1002,11 @@
     * ![image-20231111194503052](C:\Users\10482\AppData\Roaming\Typora\typora-user-images\image-20231111194503052.png)
   * 3、作用域：变量对程序而言可见的范围。
 
+#### 9.3.2 新的名称空间特性
+
+* 通过定义一种新的声明区域来创建命名的名称空间，这样做的目的之一是提供一个声明名称的区域。
+* 一个名称空间中的名称不会与另外一个名称空间的相同名称发生冲突，同时允许程序的其他部分使用该名称空间中声明的东西。
+* 名称空间可以是全局的，也可以位于另一个名称空间中，但不能位于代码块中。----------在默认情况下，在名称空间中声明的名称的链接性为外部的。
+* 除了用户定义的名称空间外，还存在另一个名称空间：全局名称空间
+  * 对应于文件级声明区域，因此前面所说的全局变量现在被描述为位于全局名称空间中。
+
