--- a/notes/ch09 内存模型和名称空间.md
+++ b/notes/ch09 内存模型和名称空间.md
@@ -1006,9 +1006,16 @@
 
 #### 9.3.2 新的名称空间特性
 
-* 通过定义一种新的声明区域来创建命名的名称空间，这样做的目的之一是提供一个声明名称的区域。
-* 一个名称空间中的名称不会与另外一个名称空间的相同名称发生冲突，同时允许程序的其他部分使用该名称空间中声明的东西。
-* 名称空间可以是全局的，也可以位于另一个名称空间中，但不能位于代码块中。----------在默认情况下，在名称空间中声明的名称的链接性为外部的。
-* 除了用户定义的名称空间外，还存在另一个名称空间：全局名称空间
-  * 对应于文件级声明区域，因此前面所说的全局变量现在被描述为位于全局名称空间中。
+* 相关注意事项：
+  * 通过定义一种新的声明区域来创建命名的名称空间，这样做的目的之一是提供一个声明名称的区域。
+  * **一个名称空间中的名称不会与另外一个名称空间的相同名称发生冲突**，同时允许程序的其他部分使用该名称空间中声明的东西。
+    * 名称空间中的声明和定义规则同全局声明和定义规则相同。
+  * 名称空间可以是全局的，也可以位于另一个名称空间中，但不能位于代码块中。----------在默认情况下，在名称空间中声明的名称的链接性为外部的。
+  * 除了用户定义的名称空间外，还存在另一个名称空间：全局名称空间
+    * 对应于文件级声明区域，因此前面所说的全局变量现在被描述为位于全局名称空间中。
+  * 名称空间是开放的，即可以把名称加入到已有的名称空间中。同样，可以在原名称空间提供函数原型所在文件（或另一个文件中）再次使用同样的名称空间提供所提供该函数原型的代码。P326
+  * 访问给定名称空间中的名称方法：
+    * 通过作用域解析运算符(::)。
+      * 其中，未被装饰的名称称为未限定的名称；包含名称空间的名称称为限定的名称。
+* 1、using 声明和 using 编译指令
 
