--- a/notes/ch09 内存模型和名称空间.md
+++ b/notes/ch09 内存模型和名称空间.md
@@ -1007,6 +1007,7 @@
 #### 9.3.2 新的名称空间特性
 
 * 相关注意事项：
+
   * 通过定义一种新的声明区域来创建命名的名称空间，这样做的目的之一是提供一个声明名称的区域。
   * **一个名称空间中的名称不会与另外一个名称空间的相同名称发生冲突**，同时允许程序的其他部分使用该名称空间中声明的东西。
     * 名称空间中的声明和定义规则同全局声明和定义规则相同。
@@ -1017,5 +1018,64 @@
   * 访问给定名称空间中的名称方法：
     * 通过作用域解析运算符(::)。
       * 其中，未被装饰的名称称为未限定的名称；包含名称空间的名称称为限定的名称。
+
 * 1、using 声明和 using 编译指令
-20231112
+
+  * C++ 提供using 声明和 using 编译指令 来简化对名称空间中名称的使用。
+
+    * using 声明：使特定的标识符可用（使一个名称可用）；
+      * using 声明将特定的名称添加到它所属的声明区域中：
+        * using XXX::abc；将 abc 添加到相应的声明区域中，即可使用名称 abc 代替 XXX::abc。
+      * 作用域：
+        * 在函数中使用 using 声明，将名称添加到局部声明区域中；
+        * 在函数外使用 using 声明，将名称添加到全局名称中。
+    * using 编译指令：使整个名称空间可用。
+      * using 编译指令使所有的名称都可用。（而不需要使用作用域解析运算符）
+      * using 编译指令由 名称空间名 和 它前面的关键字 using namespace 组成。
+      * 作用域：
+        * 在全局声明区域中使用，将该名称空间的名称全局可用；
+        * 在函数中使用，将其中的名称在该函数中可用。
+
+  * 二义性：
+
+    * 如果由名称空间 jack 和 jill，并在代码中使用作用域解析运算符，则不会存在二义性:
+
+      * ```c++
+        jack::pal = 3;
+        jill::pal = 10;
+        ```
+
+      * 变量 jack::pal 和 jill:pal 是不同的标识符，表示不同的内存单元。
+
+    * 如果使用 using 声明，情况将发生变化：
+
+      * ```c++
+        jack::pal;
+        jill::pal;
+        pal = 4;	// which one? now have a  conflict
+        ```
+
+      * 编译器不允许您同时使用上述两个using声明，因为这将导致二义性。
+
+* 2、using 编译指令和 using 声明之比较
+
+  * 使用 using 编译指令导入一个名称空间中所有的名称与使用多个 using 声明是不一样的（一对多），而更像是大量使用作用域解析运算符。使用 using声明时，就好像声明了相应的名称一样（一对一）。
+
+  * 如果使用 using 编译指导入一个已经在函数中声明的名称，则局部名称将隐藏名称空间名，就像隐藏同名的全局变量一样。不过仍可以像下面的示例中那样使用作用域解析运算符。P328（局部版本隐藏名称空间版本）
+
+  * 一般说来，使用 using 声明比使用 using 编译指令更安全，这是由于它只导入指定的名称。
+
+    * ```c++
+      int x;
+      std::cin >> x;
+      std::cout << x << std::endl;
+      //---------------或者---------------//
+      using std::cin;
+      using std::cout;
+      using std::endl;
+      int x;
+      cin >> x;
+      cout << x << endl;
+      ```
+
+* 3、名称空间的其他特性
