--- a/notes/ch09 内存模型和名称空间.md
+++ b/notes/ch09 内存模型和名称空间.md
@@ -1079,3 +1079,80 @@
       ```
 
 * 3、名称空间的其他特性
+
+  * a. 可以将名称空间声明进行嵌套：
+
+    * ```c++
+      namespace elements
+      {
+          namespace fires
+          {
+              int flame;
+              ...
+          }
+          float water;
+      }
+      ```
+
+    * 这里，flame指的是 elements::fires::flame。
+
+    * 同样，可以使用下面的 using 编译指令使内部的名称可用：
+
+      * ```c++
+        using namespace elements::fires;
+        ```
+
+  * b. 可以在名称空间中使用 using 编译指令和 using 声明：
+
+    * ```c++
+      namespace myth
+      {
+          using Jill::fetch;
+          using namespace elements;
+         	using std::cout;
+          using std::cin;
+      }
+      ```
+
+    * 因此可以这样访问 fetch：
+
+      * ```c++
+        std::cin >> myth::fetch;
+        //---------------或者---------------//
+        Jell::fetch;
+        std::cout << Jill::fetcj;
+        //-----如果没有与之冲突的局部变量-----//
+        using namespace myth;
+        cin >> fetch;
+        ```
+
+    * 现在考虑将 using 编译指令用于 myth 名称空间的情况。
+
+      * using 编译指令是可传递的：
+
+        * 如果 A op B 且 B op C，则A op C；说明操作 op 式可传递的。
+
+        * 也就是说：
+
+          * ```c++
+            using namespace myth;
+            //--------------等价于--------------//
+            using namespace myth;
+            using namespace elements;
+            ```
+
+      * 也可以给名称空间创建别名：
+
+        * ```c++
+          namespace my_things {...};
+          //创建别名
+          namespace mt = my_things;
+          //则可用这种技术来简化对嵌套名称空间的使用：
+          namespace MEF = myth::elements::fires;
+          using MEF::flame;
+          ```
+
+* 4、未命名的名称空间
+
+  * 
+
