--- a/notes/ch09 内存模型和名称空间.md
+++ b/notes/ch09 内存模型和名称空间.md
@@ -1154,5 +1154,22 @@
 
 * 4、未命名的名称空间
 
-  * 
+  * 可以通过省略名称空间的名称来创建未命名的名称空间：
 
+    * ```c++
+      namespace
+      {
+          int ince;
+          int bandycoot;
+      }
+      ```
+
+    * 这就像后面跟着 using 编译指令一样，也就是说，在该名称空间中声明的名称的潜在作用域为：
+
+      * 从声明点到该声明区域末尾。
+      * 从这个方面看，它们与全局变量相似。然而，由于这种名称空间没有名称，因此不能显式地使用 using 编译指令或 using 声明来使它在其他位置都可用。
+        * 具体地说，不能在未命名名称空间所属文件之外的其他文件中，使用该名称空间中的名称。这提供了链接性为内部的静态变量的替代品。例如，P331
+
+
+
+#### 9.3.3 名称空间示例
