--- a/notes/ch09 内存模型和名称空间.md
+++ b/notes/ch09 内存模型和名称空间.md
@@ -1173,3 +1173,165 @@
 
 
 #### 9.3.3 名称空间示例
+
+* 多文件示例：
+
+  * 1、头文件示例（包含头文件中常包含的内容:常量、结构定义和函数原型）：
+
+    * ```c++
+      #pragma once
+      // ch09_11_namesp.h
+      #include <string>
+      // create the pers and debts namespace
+      namespace pers
+      {
+      	struct Person
+      	{
+      		std::string fname;
+      		std::string lname;
+      	};
+      	void getPerson(Person&);
+      	void showPerson(const Person&);
+      }
+      
+      namespace debts
+      {
+      	using namespace pers;
+      	struct Debt
+      	{
+      		Person name;
+      		double amount;
+      	};
+      	void getDebt(Debt&);
+      	void showDebt(const Debt&);
+      	double sumDebts(const Debt ar[], int n);
+      }
+      ```
+
+  * 2、源代码文件示例（它提供了头文件中的函数原型对应的定义）在名称空间中声明的函数名的作用域为整个名称空间，因此定义和声明必须位于同一个名称空间中。这正是名称空间的开放性发挥作用的地方：
+
+    * ```c++
+      // ch09_12_namesp.cpp -- namespaces
+      #include <iostream>
+      #include "namesp.h"
+      
+      namespace pers
+      {
+      	using std::cout;
+      	using std::cin;
+      	void getPerson(Person& rp)
+      	{
+      		cout << "Enter first name: ";
+      		cin >> rp.fname;
+      		cout << "Enter last name: ";
+      		cin >> rp.lname;
+      	}
+      	void showPerson(const Person& rp)
+      	{
+      		std::cout << rp.lname << ", " << rp.fname;
+      	}
+      }
+      
+      namespace debts
+      {
+      	void getDebt(Debt& rd)
+      	{
+      		getPerson(rd.name);
+      		std::cout << "Enter debt: ";
+      		std::cin >> rd.amount;
+      	}
+      	void showDebt(const Debt& rd)
+      	{
+      		showPerson(rd.name);
+      		std::cout << ": $" << rd.amount << std::endl;
+      	}
+      	double sumDebts(const Debt ar[], int n)
+      	{
+      		double total = 0;
+      		for (int i = 0; i < n; i++)
+      			total += ar[i].amount;
+      		return total;
+      	}
+      }
+      ```
+
+  * 3、源代码文件示例（它使用了名称空间中声明和定义的结构和函数）：
+
+    * ```c++
+      // ch09_13_namessp.cpp -- using namespace
+      #include <iostream>
+      #include "namesp.h"
+      
+      void other(void);
+      void another(void);
+      
+      int main(void)
+      {
+      	using debts::Debt;
+      	using debts::showDebt;
+      	Debt golf = { {"Benny", "Goatsniff"}, 120.0 };
+      	showDebt(golf);
+      	other();
+      	another();
+      
+      	return 0;
+      }
+      
+      void other(void)
+      {
+      	using std::cout;
+      	using std::endl;
+      	using namespace debts;
+      	Person dg = { "Doodles", "Glister" };
+      	showPerson(dg);
+      	cout << endl;
+      	Debt zippy[3];
+      	int i;
+      	for (i = 0; i < 3; i++)
+      		getDebt(zippy[i]);
+      	for (i = 0; i < 3; i++)
+      		showDebt(zippy[i]);
+      	cout << "Total debt: $" << sumDebts(zippy, 3) << endl;
+      
+      	return;
+      }
+      
+      void another(void) {
+      	using pers::Person;
+      	Person collector = { "Millo", "Rightshift" };
+      	pers::showPerson(collector);
+      	std::cout << std::endl;
+      }
+      ```
+
+  * 4、结果：
+
+    * ```c++
+      Goatsniff, Benny: $120
+      Glister, Doodles
+      Enter first name: Arabella
+      Enter last name: Binx
+      Enter debt: 100
+      Enter first name: Cleve
+      Enter last name: Delaproux
+      Enter debt: 120
+      Enter first name: Eddie
+      Enter last name: Fiotox
+      Enter debt: 200
+      Binx, Arabella: $100
+      Delaproux, Cleve: $120
+      Fiotox, Eddie: $200
+      Total debt: $420
+      Rightshift, Millo
+      ```
+
+    * 注意，using 声明只使用了名称：
+
+      * 例如，第二个 using 声明没有描述showDebt 的返回类型或函数特征标，而只给出了名称；
+      * 因此，如果函数被重载，则一个 using 声明将导入所有的版本。
+
+    * 另外，虽然 Debt 和 showDebt 都使用了 Person 类型，但不必导入任何 Person名称，因为 debt 名称空间有一条包含 pers 名称空间的 using 编译指令。
+
+
+
+#### 9.3.4 名称空间及其前途
