--- a/notes/ch09 内存模型和名称空间.md
+++ b/notes/ch09 内存模型和名称空间.md
@@ -1335,3 +1335,15 @@
 
 
 #### 9.3.4 名称空间及其前途
+
+* 指导规则：
+  * 使用在已命名的名称空间中声明的变量，而不是使用外部全局变量；
+  * 使用在已命名的名称空间中声明的变量，而不是使用静态全局变量。
+  * 如果开发了一个函数库或类库，将其放在一个名称空间中。事实上，C++当前提倡将标准函数库放在名称空间 std 中，这种做法扩展到了来自C语言中的函数。例如，头文件 math.h 是与C语言兼容的，没有使用名称空间，但 C++头文件 cmath 应将各种数学库函数放在名称空间 std 中。实际上，并非所有的编译器都完成了这种过渡。
+  * 仅将编译指令 using 作为一种将旧代码转换为使用名称空间的权宜之计。
+  * **不要在头文件中使用 using 编译指令**。
+    * 首先，这样做掩盖了要让哪些名称可用；
+    * 另外，包含头文件的顺序可能影响程序的行为；
+    * 如果非要使用编译指令 using，应将其放在所有预处理器编译指令 #include 之后。
+  * 导入名称时，首选使用作用域解析运算符或 using 声明的方法；
+  * 对于 using 声明，首选将其作用域设置为局部而不是全局。
