--- a/notes/ch10 对象和类.md
+++ b/notes/ch10 对象和类.md
@@ -1,1 +1,12 @@
-第十章 对象和类
+## 第十章 对象和类
+
+* 面向对象编程（oop）是一种特殊的、设计程序的概念性方法，特性如下：
+  * 抽象；
+  * 封装和数据隐藏；
+  * 多态；
+  * 继承；
+  * 代码的可重用性。
+
+
+
+### 10.1 过程性编程和面向对象编程
