--- a/notes/ch10 对象和类.md
+++ b/notes/ch10 对象和类.md
@@ -10,3 +10,8 @@
 
 
 ### 10.1 过程性编程和面向对象编程
+
+* 采用过程性编程方法时，首先考虑要遵循的步骤，然后考虑如何表示这些数据(并不需要程序直运行，用户可能希望能够将数据存储在一个文件中，然后从这个文件中读取数据)。
+* 采用 OOP 方法时，首先从用户的角度考虑对象——描述对象所需的数据以及描述用户与数据交瓦所需的操作。完成对接口的描述后，需要确定如何实现接口和数据存储。最后，使用新的设计方案创建出程序。
+
+### 10.2 抽象和类
