--- a/notes/ch10 对象和类.md
+++ b/notes/ch10 对象和类.md
@@ -12,6 +12,55 @@
 ### 10.1 过程性编程和面向对象编程
 
 * 采用过程性编程方法时，首先考虑要遵循的步骤，然后考虑如何表示这些数据(并不需要程序直运行，用户可能希望能够将数据存储在一个文件中，然后从这个文件中读取数据)。
+  * **在面向过程**：①打开冰箱→②把大象塞进去→③关上冰箱
+  * ![img](https://img-blog.csdnimg.cn/e75c0fe687a149a8820ab29497fcc7ac.png)
+  * C语言是面向过程的，关注的是过程，分析出求解问题的步骤，通过函数调用逐步解决问题。
 * 采用 OOP 方法时，首先从用户的角度考虑对象——描述对象所需的数据以及描述用户与数据交瓦所需的操作。完成对接口的描述后，需要确定如何实现接口和数据存储。最后，使用新的设计方案创建出程序。
+  * **面向对象**：把冰箱看成是一个对象，把大象也看成是一个对象，通过操作大象和冰箱这两个对象，完成将大象放入冰箱的过程。
+  * ![img](https://img-blog.csdnimg.cn/fe7282164d02432fa84f7f5fa71a6359.png)
+  * C++是面向对象的，关注的是对象，将一件事情拆分成不同的对象，靠对象之间的交互完成。
+  * ————————————————
+    版权声明：本文为CSDN博主「includeevey」的原创文章，遵循CC 4.0 BY-SA版权协议，转载请附上原文出处链接及本声明。
+    原文链接：https://blog.csdn.net/includeevey/article/details/127151939
 
 ### 10.2 抽象和类
+
+* 📌生活中充满复杂性，处理复杂性的方法之一是简化和抽象！
+
+#### 10.2.1 类型是什么
+
+* 指定基本类型完成了三项工作：
+  * 决定数据对象需要的内存数量；
+  * 决定如何解释内存中的位(long 和 flat 在内存中占用的位数相同，但将它们转换为数值的方法不同)；
+  * 决定可使用数据对象执行的操作或方法。
+
+#### 10.2.2 C++中的类
+
+* 类是一种将抽象转换为用户定义类型的C++工具，它将数据表示和操纵数据的方法组合成一个整洁的包。
+
+* 如何表示类：
+
+  * 首先，考虑如何使用数据表示对象，应将可执行的操作进行限制；（成员函数，即操纵数据的方法）
+  * 其次，根据上述清单定义类的公有接口，为支持该接口， 需要存储一些信息；（数据成员，即描述数据的部分）
+  * 最后，定义类。类规范由两个部分组成：
+    * 类声明：以数据成员的方式描述数据部分，以成员函数的方式描述公有接口；
+    * 类方法定义：描述如何实现类成员函数。
+  * 简单地说，类声明提供了类的蓝图，而方法定义则提供了细节。
+
+* 公共接口：
+
+  * 公众（public）是使用类的程序，交互系统由类对象组成，而接口由编写类的人提供的方法组成。接口让程序员能够编写与类对象交互的代码，从而让程序能够使用类对象。
+
+* 开发一个类并编写一个使用它的程序步骤：
+
+  * 1、将接口（类定义）放在头文件中；
+
+    * 示例：
+
+      * ```c++
+        
+        ```
+
+    * 
+
+  * 2、将实现（类方法的代码）放在源代码文件中。
