--- a/notes/ch10 对象和类.md
+++ b/notes/ch10 对象和类.md
@@ -13,7 +13,7 @@
 
 * 采用过程性编程方法时，首先考虑要遵循的步骤，然后考虑如何表示这些数据(并不需要程序直运行，用户可能希望能够将数据存储在一个文件中，然后从这个文件中读取数据)。
   * **在面向过程**：①打开冰箱→②把大象塞进去→③关上冰箱
-  * ![Uploading image.png…]()
+  * ![img](https://img-blog.csdnimg.cn/e75c0fe687a149a8820ab29497fcc7ac.png)
   * C语言是面向过程的，关注的是过程，分析出求解问题的步骤，通过函数调用逐步解决问题。
 * 采用 OOP 方法时，首先从用户的角度考虑对象——描述对象所需的数据以及描述用户与数据交瓦所需的操作。完成对接口的描述后，需要确定如何实现接口和数据存储。最后，使用新的设计方案创建出程序。
   * **面向对象**：把冰箱看成是一个对象，把大象也看成是一个对象，通过操作大象和冰箱这两个对象，完成将大象放入冰箱的过程。
