--- a/notes/ch10 对象和类.md
+++ b/notes/ch10 对象和类.md
@@ -53,14 +53,38 @@
 
 * 开发一个类并编写一个使用它的程序步骤：
 
-  * 1、将接口（类定义）放在头文件中；
+* 1、将接口（类定义）放在头文件中；
 
-    * 示例：
+  * 示例：
 
-      * ```c++
-        
-        ```
+    * ```c++
+      #pragma once
+      // ch10_01_stock00.h -- Stock class interface
+      //version 00
+      #ifndef CH10_O1_STOCK00_H_
+      #define CH10_O1_STOCK00_H_
+      
+      #include <string>
+      
+      class Stock
+      {
+      private:
+      	std::string company;
+      	long shares;
+      	double share_val;
+      	double total_val;
+      	void set_tot() { total_val = shares * shares_val; }
+      public:
+      	void acquire(const std::string& co, long n, double pr);
+      	void buy(long num, double price);
+      	void sell(long num, double price);
+      	void update(double price);
+      	void show();
+      };
+      
+      #endif
+      ```
 
-    * 
+  * 
 
-  * 2、将实现（类方法的代码）放在源代码文件中。
+* 2、将实现（类方法的代码）放在源代码文件中。
